# cuframe

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  bench_decode.cpp  bench_pipeline.cpp  bench_preprocess.cpp
docs/: api.md
examples/: CMakeLists.txt  basic_pipeline.cpp  classification_pipeline.cpp  error_recovery.cpp  onnxruntime_inference.cpp  temporal_pipeline.cpp  tensorrt_inference.cpp  two_stage_pipeline.cpp
examples/python/: basic_pipeline.py  error_recovery.py  ort_inference.py  temporal_pipeline.py  two_stage_pipeline.py
include/cuframe/: batch_pool.h  cuda_utils.h  cuframe.h  decoder.h  demuxer.h  device_buffer.h  frame_pool.h  gpu_frame_batch.h  nvtx.h  pipeline.h
include/cuframe/kernels/: color_convert.h  fused_preprocess.h  normalize.h  nv12_sample.h  resize.h  roi_crop.h
python/: bindings.cpp
python/cuframe/: __init__.py
src/: CMakeLists.txt  main.cpp
src/cuframe/: batch_pool.cpp  cuda_utils.cpp  decoder.cpp  demuxer.cpp  device_buffer.cu  frame_pool.cpp  gpu_frame_batch.cpp  pipeline.cpp
src/cuframe/kernels/: color_convert.cu  fused_preprocess.cu  normalize.cu  resize.cu  roi_crop.cu
tests/: CMakeLists.txt  generate_test_videos.sh  test_batch_pool.cpp  test_center_crop.cpp  test_codec_support.cpp  test_color_convert.cpp  test_decoder.cpp  test_demuxer.cpp  test_device_buffer.cpp  test_error_recovery.cpp  test_frame_pool.cpp  test_fused_preprocess.cpp  test_gpu_frame_batch.cpp  test_integration.cpp  test_normalize.cpp  test_pipeline.cpp  test_pipeline_multistream.cpp  test_placeholder.cpp  test_preprocess_integration.cpp  test_resize.cpp  test_roi_crop.cpp
tests/data/: frame_dump.nv12  frozen_frame.nv1  preprocess_dump.ppm
tests/python/: test_complete_api.py  test_error_recovery.py  test_pipeline.py
tools/: CMakeLists.txt  bench.sh  dump_frame.cpp  occupancy_report.cpp
